foloosi core api
