# v1.swagger.yml
@@ -1854,7 +1854,7 @@ components:
             - depositReferenceCode
             - cryptoDepositAddress
             - userIban
-            - actionRequired
+            - charge
           properties:
             debitAmount:
               $ref: '#/components/schemas/varyDecimal'
@@ -1883,9 +1883,14 @@ components:
               anyOf:
                 - nullable: true
                 - $ref: '#/components/schemas/varyDecimal'
-            actionRequired:
-              type: string
+            charge:
+              type: object
               nullable: true
+              properties:
+                actionUrl:
+                  type: string
+                referenceToken:
+                  type: string
     ColdBankAccount:
       type: object
       required:
@@ -2861,7 +2866,6 @@ components:
             - hold
             - completed
             - canceled
-            - expired
             - error
         isAgreedRisks:
           type: boolean
